// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with children and render should return null if when equals false 1`] = `null`;

exports[`with children and render should return primary content from children and ignore render if when equals true 1`] = `
<div>
  children
</div>
`;

exports[`with children should return null if when equals false 1`] = `null`;

exports[`with children should return primary content from children if when equals true 1`] = `
<div>
  render me
</div>
`;

exports[`with render should not evaluate render if when is undefined 1`] = `null`;

exports[`with render should return null if when equals false 1`] = `null`;

exports[`with render should return primary content from render if when equals true 1`] = `
<div>
  render me
</div>
`;

exports[`without children and render should return null 1`] = `null`;
